# quant-platform

./: .dockerignore  .gitignore  .pre-commit-config.yaml  =1.3  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  synthetic_pair.csv
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
configs/: stat_arb_example.yaml  stat_arb_exec.yaml
docker/: Dockerfile.dev
examples/: basic_config.yaml  delta_hedge_demo.py  stat_arb.yaml  stat_arb_example.json
examples/data/: small_md.csv  synthetic_pair.csv
runs/example_stat-arb/: config.json  drawdown.csv  equity_curve.csv  risk_metrics.json  trades.csv
runs/stat_arb_demo/: config.json  positions.csv  prices_last.csv
runs/stat_arb_exec/: drawdown.csv  equity.csv  positions.csv  prices_last.csv  risk_metrics.json
runs/stat_arb_output/: config.json  drawdown.csv  equity_curve.csv  prices_last.csv  risk_metrics.json
runs/test/: equity_curve.csv  portfolio_snapshots.csv
scripts/: precommit_fix.sh  run_pipeline.py  run_walk_forward_example.py
src/quant_platform/: cli.py
src/quant_platform.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_config_loader.py  test_equities_ingestion.py  test_execution_context_snapshot.py  test_feature_store.py  test_features.py  test_macro_ingestion.py  test_pipeline.py  test_pipeline_end_to_end.py  test_runner_cli.py  test_runner_convenience_api.py  test_runner_core.py  test_smoke.py  test_strategy_registry.py
tests/execution/: test_async_engine.py  test_broker.py  test_costs.py  test_engine.py  test_engine_routing.py  test_latency.py  test_ledger.py  test_partial_fills.py  (+4 more)
(+167 files in other folders)
