[project]
name = "quant-platform"
version = "0.1.0"
description = "Full multi-asset quant research & trading platform"
authors = [
    {name = "Carlos",email = "cscastillo1209@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=25.11.0,<26.0.0)",
    "ruff (>=0.14.6,<0.15.0)",
    "isort (>=7.0.0,<8.0.0)",
    "pre-commit (>=4.5.0,<5.0.0)",
    "pytest (>=8.0,<10.0)"
]
