[project]
name = "quant_platform"
version = "0.1.0"
description = "Full multi-asset quant research & trading platform"
authors = [
    { name = "Carlos", email = "cscastillo1209@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12,<3.14"

dependencies = [
    "polars>=1.7.1",
    "pydantic>=2.8.2",
    "numpy>=1.26",
    "scipy>=1.12",
    "fredapi>=0.5.2",
    "httpx>=0.27",
    "aiohttp>=3.9",
    "tqdm>=4.66",
    "scikit-learn>=1.5",
    "lightgbm>=4.3",
    "xgboost>=2.1",
    "joblib>=1.4"

]

[tool.poetry]
packages = [
    { include = "quant_platform", from = "src" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=25.11.0,<26.0.0)",
    "ruff (>=0.14.6,<0.15.0)",
    "isort (>=7.0.0,<8.0.0)",
    "pre-commit (>=4.5.0,<5.0.0)",
    "pytest (>=8.0,<10.0)",
    "pytest-asyncio (>=0.23,<1.0)"
]
